Se creó con Colab

--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "12iJG3oD6KKJ-HyfG7-0oEkp3dGv-8RS1",
-      "authorship_tag": "ABX9TyP2hc64NXRJjxJ2bgf/kGD/",
+      "authorship_tag": "ABX9TyMYvLE5aMvtTzDYU9SAHjkm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -682,24 +682,24 @@
     {
       "cell_type": "code",
       "source": [
-        "#Apparent molecular weight Gas\n",
+        "#Apparent molecular weight Gas - Кажущийся молекулярный вес Газа\n",
         "M=Tabla['Apparent MW'].sum()\n",
-        "print(M, 'lbm/lbm-mol либо г/моль')"
+        "print('Кажущийся молекулярный вес Газа: {:.2f}'.format(M), 'lbm/lbm-mol либо г/моль')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9WyFDQ6xpf4I",
-        "outputId": "fe1082e1-bca9-48c7-97fc-8ca35d8e3b68"
+        "outputId": "4aadaf87-43ee-4535-a669-52bad2f99051"
       },
-      "execution_count": 103,
+      "execution_count": 113,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "17.532325299999997 lbm/lbm-mol либо г/моль\n"
+            "Кажущийся молекулярный вес Газа: 17.53 lbm/lbm-mol либо г/моль\n"
           ]
         }
       ]
@@ -709,22 +709,22 @@
       "source": [
         "#Specific gravity - Удельная плотность газовой смеси\n",
         "SGm = M/28.96\n",
-        "print(SGm)"
+        "print(\"Удельная плотность газовой смеси: {:.2f}\".format(SGm))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Hxn5WiFpqHIi",
-        "outputId": "bbd00a81-046f-43d9-e82b-8c75f7404931"
+        "outputId": "82818a75-b7cc-4e5e-c642-9430cf200dd0"
       },
-      "execution_count": 104,
+      "execution_count": 112,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.6053979730662982\n"
+            "Удельная плотность газовой смеси: 0.61\n"
           ]
         }
       ]
