--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -735,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -744,7 +744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [
         {
@@ -779,7 +779,7 @@
               "11                  -  >"
             ]
           },
-          "execution_count": 14,
+          "execution_count": 3,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -790,7 +790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -799,7 +799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [
         {
@@ -961,7 +961,7 @@
               "11                  -  "
             ]
           },
-          "execution_count": 16,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -972,7 +972,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -990,6 +990,76 @@
       ],
       "source": [
         "print(Tabla.dtypes)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "MC7plus= 114.2\n",
+        "GC7plus= 0.7070"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 14,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Темпервтура кипения :  387.498 K\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Температура кипения\n",
+        "Tbplus=5/9 * ((4.5579*(MC7plus**0.15178)*(GC7plus**0.15427))**3)\n",
+        "print(\"Температура кипения : \", round(Tbplus, 3), \"K\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "558.473 K\n"
+          ]
+        }
+      ],
+      "source": [
+        "Tpcplus = 5/9 * ((341.7 + 811 * GC7plus) + ((0.4244 + 0.1174*GC7plus)*(9*Tbplus/5)) +\n",
+        "                 ((0.4669 - 3.2623*GC7plus)*(10**5/(9*Tbplus/5))))\n",
+        "print(round(Tpcplus,3), \"K\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "25.902 bar или 375.579 psia\n"
+          ]
+        }
+      ],
+      "source": [
+        "Ppplus= 0.06895 * np.exp( 8.3634 -(0.0566/GC7plus) -\n",
+        "                        ((0.24244 + (2.2898/GC7plus) + (0.11857/GC7plus**2)) * (9*Tbplus/5000)) +\n",
+        "                        ((1.4685 + (3.648/GC7plus)+ (0.47227/GC7plus**2))* ((9*Tbplus/5)**2/(10**7))-\n",
+        "                        ((0.42019 + 1.6977/GC7plus**2)* ((9*Tbplus/5)**3/(10**10)))))\n",
+        "\n",
+        "print(round(Ppplus,3), \"bar или\", round(Ppplus*14.5,3), \"psia\")"
       ]
     },
     {
