--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -735,7 +735,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -744,7 +744,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [
         {
@@ -779,7 +779,7 @@
               "11                  -  >"
             ]
           },
-          "execution_count": 3,
+          "execution_count": 4,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -790,7 +790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -799,7 +799,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -961,7 +961,7 @@
               "11                  -  "
             ]
           },
-          "execution_count": 5,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -972,7 +972,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [
         {
@@ -1004,14 +1004,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Темпервтура кипения :  387.498 K\n"
+            "Температура кипения :  387.498 K\n"
           ]
         }
       ],
@@ -1023,7 +1023,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -1042,7 +1042,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
@@ -1063,13 +1063,73 @@
       ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": 12,
       "metadata": {},
-      "source": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['Component' ' Mole fraction' ' Molecular Weight' ' Critical temperature'\n",
+            " ' Critical pressure']\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(Tabla.columns.values)"
+      ]
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
+      "execution_count": 13,
       "metadata": {},
+      "outputs": [],
+      "source": [
+        "#добавляем новые данные в таблицу\n",
+        "Tabla.at[9, ' Critical temperature'] = Tpcplus\n",
+        "Tabla.at[9, ' Critical pressure'] = Ppplus"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "        Component   Mole fraction   Molecular Weight  Critical temperature  \\\n",
+            "0        Nitrogen          0.0236             28.013               126.200   \n",
+            "1   Carbon Dioxid          0.0164             44.010                304.21   \n",
+            "2   Acid Sulfuric          0.1841             34.080                373.53   \n",
+            "3          Methan          0.7700             16.043               190.560   \n",
+            "4          Ethane          0.0042             30.070               305.330   \n",
+            "5         Propane          0.0005             44.097               369.850   \n",
+            "6       Iso-Butan          0.0003             58.123                407.85   \n",
+            "7         N-Butan          0.0003             58.123                425.16   \n",
+            "8      Isopentane          0.0001             72.150                460.43   \n",
+            "9       N-pentane          0.0001             72.150            558.473446   \n",
+            "10         Hexane          0.0001             86.177                507.37   \n",
+            "11      Heptane +          0.0003            114.231                     -   \n",
+            "\n",
+            "    Critical pressure  \n",
+            "0              34.000  \n",
+            "1                73.8  \n",
+            "2                  90  \n",
+            "3              45.900  \n",
+            "4              48.700  \n",
+            "5              42.500  \n",
+            "6                36.4  \n",
+            "7                38.0  \n",
+            "8                33.8  \n",
+            "9           25.901982  \n",
+            "10               30.1  \n",
+            "11                  -  \n"
+          ]
+        }
+      ],
       "source": []
     }
   ],
