--- a/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/примеры.ipynb
@@ -1588,10 +1588,341 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 120,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.5164 14.33\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Parameters J and K\n",
+        "J= 0.0414* (Tabla['Part1'].sum()) + 0.0827* (Tabla['Part2'].sum())**2\n",
+        "K= 0.47265* (Tabla['Part3'].sum())\n",
+        "\n",
+        "print(round(J, 4), round(K,2))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 122,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.5162144312722644 14.320891586447043\n"
+          ]
+        }
+      ],
+      "source": [
+        "#J и K correcting\n",
+        "Jcorr= J- Ej\n",
+        "Kcorr= K - Ek\n",
+        "\n",
+        "print(Jcorr, Kcorr)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 135,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Pseudocritical Temperature 397.3 K\n",
+            "Pseudocritical Pressure 769.63 bar\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Псевдокритические T и P\n",
+        "Tpc= (Kcorr**2/Jcorr)\n",
+        "Ppc= (Tpc/Jcorr)\n",
+        "\n",
+        "print('Pseudocritical Temperature', round(Tpc,1), 'R')\n",
+        "print('Pseudocritical Pressure', round(Ppc,2), 'psia')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 136,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "#apparent molecular weight - кажущаяся молекулярная вес\n",
+        "Tabla['Apparent MW']= Tabla[' Mole fraction'] * Tabla[' Molecular Weight']"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 137,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Component</th>\n",
+              "      <th>Mole fraction</th>\n",
+              "      <th>Molecular Weight</th>\n",
+              "      <th>Critical temperature</th>\n",
+              "      <th>Critical pressure</th>\n",
+              "      <th>Part1</th>\n",
+              "      <th>Part2</th>\n",
+              "      <th>Part3</th>\n",
+              "      <th>Apparent MW</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Nitrogen</td>\n",
+              "      <td>0.0236</td>\n",
+              "      <td>28.013</td>\n",
+              "      <td>126.200</td>\n",
+              "      <td>34.0</td>\n",
+              "      <td>0.0876</td>\n",
+              "      <td>0.0455</td>\n",
+              "      <td>0.5108</td>\n",
+              "      <td>0.661107</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Carbon Dioxid</td>\n",
+              "      <td>0.0164</td>\n",
+              "      <td>44.010</td>\n",
+              "      <td>304.210</td>\n",
+              "      <td>73.8</td>\n",
+              "      <td>0.0676</td>\n",
+              "      <td>0.0333</td>\n",
+              "      <td>0.5807</td>\n",
+              "      <td>0.721764</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Acid Sulfuric</td>\n",
+              "      <td>0.1841</td>\n",
+              "      <td>34.080</td>\n",
+              "      <td>373.530</td>\n",
+              "      <td>90.0</td>\n",
+              "      <td>0.7641</td>\n",
+              "      <td>0.3751</td>\n",
+              "      <td>7.2487</td>\n",
+              "      <td>6.274128</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Methan</td>\n",
+              "      <td>0.7700</td>\n",
+              "      <td>16.043</td>\n",
+              "      <td>190.560</td>\n",
+              "      <td>45.9</td>\n",
+              "      <td>3.1968</td>\n",
+              "      <td>1.5689</td>\n",
+              "      <td>21.6579</td>\n",
+              "      <td>12.353110</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Ethane</td>\n",
+              "      <td>0.0042</td>\n",
+              "      <td>30.070</td>\n",
+              "      <td>305.330</td>\n",
+              "      <td>48.7</td>\n",
+              "      <td>0.0263</td>\n",
+              "      <td>0.0105</td>\n",
+              "      <td>0.1838</td>\n",
+              "      <td>0.126294</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Propane</td>\n",
+              "      <td>0.0005</td>\n",
+              "      <td>44.097</td>\n",
+              "      <td>369.850</td>\n",
+              "      <td>42.5</td>\n",
+              "      <td>0.0044</td>\n",
+              "      <td>0.0015</td>\n",
+              "      <td>0.0284</td>\n",
+              "      <td>0.022049</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Iso-Butan</td>\n",
+              "      <td>0.0003</td>\n",
+              "      <td>58.123</td>\n",
+              "      <td>407.850</td>\n",
+              "      <td>36.4</td>\n",
+              "      <td>0.0034</td>\n",
+              "      <td>0.0010</td>\n",
+              "      <td>0.0203</td>\n",
+              "      <td>0.017437</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>N-Butan</td>\n",
+              "      <td>0.0003</td>\n",
+              "      <td>58.123</td>\n",
+              "      <td>425.160</td>\n",
+              "      <td>38.0</td>\n",
+              "      <td>0.0034</td>\n",
+              "      <td>0.0010</td>\n",
+              "      <td>0.0207</td>\n",
+              "      <td>0.017437</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Isopentane</td>\n",
+              "      <td>0.0001</td>\n",
+              "      <td>72.150</td>\n",
+              "      <td>460.430</td>\n",
+              "      <td>33.8</td>\n",
+              "      <td>0.0014</td>\n",
+              "      <td>0.0004</td>\n",
+              "      <td>0.0079</td>\n",
+              "      <td>0.007215</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>N-pentane</td>\n",
+              "      <td>0.0001</td>\n",
+              "      <td>72.150</td>\n",
+              "      <td>469.710</td>\n",
+              "      <td>33.7</td>\n",
+              "      <td>0.0014</td>\n",
+              "      <td>0.0004</td>\n",
+              "      <td>0.0081</td>\n",
+              "      <td>0.007215</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>Hexane</td>\n",
+              "      <td>0.0001</td>\n",
+              "      <td>86.177</td>\n",
+              "      <td>507.370</td>\n",
+              "      <td>30.1</td>\n",
+              "      <td>0.0017</td>\n",
+              "      <td>0.0004</td>\n",
+              "      <td>0.0092</td>\n",
+              "      <td>0.008618</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>Heptane +</td>\n",
+              "      <td>0.0003</td>\n",
+              "      <td>114.231</td>\n",
+              "      <td>558.473</td>\n",
+              "      <td>25.9</td>\n",
+              "      <td>0.0065</td>\n",
+              "      <td>0.0014</td>\n",
+              "      <td>0.0329</td>\n",
+              "      <td>0.034269</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        Component   Mole fraction   Molecular Weight   Critical temperature  \\\n",
+              "0        Nitrogen          0.0236             28.013                126.200   \n",
+              "1   Carbon Dioxid          0.0164             44.010                304.210   \n",
+              "2   Acid Sulfuric          0.1841             34.080                373.530   \n",
+              "3          Methan          0.7700             16.043                190.560   \n",
+              "4          Ethane          0.0042             30.070                305.330   \n",
+              "5         Propane          0.0005             44.097                369.850   \n",
+              "6       Iso-Butan          0.0003             58.123                407.850   \n",
+              "7         N-Butan          0.0003             58.123                425.160   \n",
+              "8      Isopentane          0.0001             72.150                460.430   \n",
+              "9       N-pentane          0.0001             72.150                469.710   \n",
+              "10         Hexane          0.0001             86.177                507.370   \n",
+              "11      Heptane +          0.0003            114.231                558.473   \n",
+              "\n",
+              "     Critical pressure   Part1   Part2    Part3  Apparent MW  \n",
+              "0                 34.0  0.0876  0.0455   0.5108     0.661107  \n",
+              "1                 73.8  0.0676  0.0333   0.5807     0.721764  \n",
+              "2                 90.0  0.7641  0.3751   7.2487     6.274128  \n",
+              "3                 45.9  3.1968  1.5689  21.6579    12.353110  \n",
+              "4                 48.7  0.0263  0.0105   0.1838     0.126294  \n",
+              "5                 42.5  0.0044  0.0015   0.0284     0.022049  \n",
+              "6                 36.4  0.0034  0.0010   0.0203     0.017437  \n",
+              "7                 38.0  0.0034  0.0010   0.0207     0.017437  \n",
+              "8                 33.8  0.0014  0.0004   0.0079     0.007215  \n",
+              "9                 33.7  0.0014  0.0004   0.0081     0.007215  \n",
+              "10                30.1  0.0017  0.0004   0.0092     0.008618  \n",
+              "11                25.9  0.0065  0.0014   0.0329     0.034269  "
+            ]
+          },
+          "execution_count": 137,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "Tabla"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 157,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Кажущийся молекулярный вес Газа: 20.25 lbm/lbm-mol либо г/моль\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Apparent molecular weight Gas - Кажущийся молекулярный вес Газа\n",
+        "M=Tabla['Apparent MW'].sum()\n",
+        "print('Кажущийся молекулярный вес Газа: {:.2f}'.format(M), 'lbm/lbm-mol либо г/моль')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 160,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Удельная плотность газовой смеси: 0.70\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Specific gravity - Удельная плотность газовой смеси\n",
+        "SGm = M/28.96\n",
+        "print(\"Удельная плотность газовой смеси: {:.2f}\".format(SGm))"
+      ]
     }
   ],
   "metadata": {
