--- a/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
@@ -2074,26 +2074,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [
         {
           "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'Sutton'",
+          "evalue": "No module named 'Functions'",
           "output_type": "error",
           "traceback": [
             "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[4], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Удельная плотность газовой смеси в примере 1.1\u001b[39;00m\n\u001b[0;32m      2\u001b[0m Sg3 \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.61\u001b[39m \n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mSutton\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Sutton_function\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Sutton'"
+            "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Удельная плотность газовой смеси в примере 1.1\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mFunctions\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mSutton\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Sutton\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Functions'"
           ]
         }
       ],
       "source": [
         "#Удельная плотность газовой смеси в примере 1.1\n",
-        "Sg3 = 0.61 \n",
-        "from Sutton import Sutton_function"
+        "from Functions.Sutton import Sutton"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
