--- a/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
@@ -2074,7 +2074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -2091,7 +2091,7 @@
       ],
       "source": [
         "#Удельная плотность газовой смеси в примере 1.1\n",
-        "from Functions.Sutton import Sutton"
+        "from Functions.Sutton import Sutton_function"
       ]
     },
     {
