--- a/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
@@ -2076,22 +2076,37 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'Functions'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "Cell \u001b[1;32mIn[13], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m#Удельная плотность газовой смеси в примере 1.1\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mFunctions\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mSutton\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Sutton\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'Functions'"
-          ]
-        }
-      ],
+      "outputs": [],
+      "source": [
+        "# Удельная плотность газовой смеси: 0.61\n",
+        "SGm = 0.61"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
         "#Удельная плотность газовой смеси в примере 1.1\n",
-        "from Functions.Sutton import Sutton_function"
+        "# from Functions.Sutton import Sutton_function\n",
+        "\n",
+        "# Sutton_function (SGm)\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def Sutton_function(SGG):\n",
+        "    Ppch= 0.006895*(756.8 - 131*SGG - 3.6*SGG*SGG)\n",
+        "    Tpch= 5/9*(169.2 + 349.5*SGG - 74*SGG*SGG)\n",
+        "    return (Ppch, Tpch)\n",
+        "\n",
+        "print(Sgm)"
       ]
     },
     {
@@ -2126,7 +2141,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.5"
+      "version": "undefined.undefined.undefined"
     }
   },
   "nbformat": 4,
