--- a/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
@@ -2119,7 +2119,9 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "print(\"Hola\")"
+      ]
     }
   ],
   "metadata": {
