--- a/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
@@ -2074,7 +2074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2097,31 +2097,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "(4.66, 197.14)"
+            ]
+          },
+          "execution_count": 28,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "def Sutton_function(SGG):\n",
-        "    Ppch= 0.006895*(756.8 - 131*SGG - 3.6*SGG*SGG)\n",
-        "    Tpch= 5/9*(169.2 + 349.5*SGG - 74*SGG*SGG)\n",
+        "    Ppch= round((0.006895*(756.8 - 131*SGG - 3.6*SGG*SGG)),2)\n",
+        "    Tpch= round((5/9*(169.2 + 349.5*SGG - 74*SGG*SGG)),2)\n",
         "    return (Ppch, Tpch)\n",
         "\n",
-        "print(Sgm)"
+        "Sutton_function(SGm)\n",
+        "\n",
+        "\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "print(\"Hola\")"
-      ]
     }
   ],
   "metadata": {
@@ -2143,7 +2147,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "undefined.undefined.undefined"
+      "version": "3.12.4"
     }
   },
   "nbformat": 4,
