--- a/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Псевдокритические свойства.ipynb
@@ -2074,7 +2074,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -2097,18 +2097,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [
         {
-          "data": {
-            "text/plain": [
-              "(4.66, 197.14)"
-            ]
-          },
-          "execution_count": 28,
-          "metadata": {},
-          "output_type": "execute_result"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "псевдокритические давление (бар) и температура (К):  (4.66, 197.14)\n"
+          ]
         }
       ],
       "source": [
@@ -2117,9 +2114,10 @@
         "    Tpch= round((5/9*(169.2 + 349.5*SGG - 74*SGG*SGG)),2)\n",
         "    return (Ppch, Tpch)\n",
         "\n",
-        "Sutton_function(SGm)\n",
+        "solv= Sutton_function(SGm)\n",
+        "#мы игнорируем присутствие азота поэтому псевдокритические давление и температуру газовой смеси можно описать Ppc = Ppch и Tpc = Tpch\n",
         "\n",
-        "\n"
+        "print (\"псевдокритические давление (бар) и температура (К): \", solv)"
       ]
     },
     {
