--- a/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
@@ -2076,6 +2076,7 @@
         "\n",
         "plt.title('Псевдокритические свойства природных газов')\n",
         "fig.tight_layout()\n",
+        "plt.grid (True)\n",
         "plt.show()"
       ]
     },
