--- a/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 67,
       "metadata": {
         "id": "Z7ruRrGK5J_W"
       },
@@ -44,18 +44,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 68,
       "metadata": {
         "id": "mRLTfjuETIZQ"
       },
       "outputs": [],
       "source": [
-        "df = pd.read_csv('/content/drive/MyDrive/Table1.1.csv')"
+        "df = pd.read_csv('https://raw.githubusercontent.com/edisonc57/Inzhiniring-gazovykh-rezervuarov/bb2884aba898b9f37fd872540a3fbe6b39dda69b/%D0%93%D0%BB%D0%B0%D0%B2%D0%B0%2001%20-%20%D0%A1%D0%B2%D0%BE%D0%B9%D1%81%D1%82%D0%B2%D0%B0%20%D0%BF%D1%80%D0%B8%D1%80%D0%BE%D0%B4%D0%BD%D1%8B%D1%85%20%D0%B3%D0%B0%D0%B7%D0%BE%D0%B2/%D0%B4%D0%B0%D0%BD%D0%BD%D1%8B%D0%B5/Table%201.2.csv')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 69,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -2087,7 +2087,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
         "id": "kFpcj448r1-o"
       },
@@ -2114,7 +2114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 48,
       "metadata": {
         "id": "WWNWK1cZr1-o",
         "outputId": "b2c1cdff-d4be-4584-dd20-509f10b6d7ad"
@@ -2124,20 +2124,22 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "псевдокритические давление (бар) и температура (К):  (4.66, 197.14)\n"
+            "псевдокритические давление  46.58 бар\n",
+            "псевдокритическая температура 197.14 K\n"
           ]
         }
       ],
       "source": [
         "def Sutton_function(SGG):\n",
-        "    Ppch= round((0.006895*(756.8 - 131*SGG - 3.6*SGG*SGG)),2)\n",
+        "    Ppch= round((0.06895*(756.8 - 131*SGG - 3.6*SGG*SGG)),2)\n",
         "    Tpch= round((5/9*(169.2 + 349.5*SGG - 74*SGG*SGG)),2)\n",
         "    return (Ppch, Tpch)\n",
         "\n",
-        "solv= Sutton_function(SGm)\n",
+        "Ppch, Tpch = Sutton_function(SGm)\n",
         "#мы игнорируем присутствие азота поэтому псевдокритические давление и температуру газовой смеси можно описать Ppc = Ppch и Tpc = Tpch\n",
         "\n",
-        "print (\"псевдокритические давление (бар) и температура (К): \", solv)"
+        "print(\"псевдокритические давление \", Ppch, 'бар')\n",
+        "print(\"псевдокритическая температура\", Tpch, 'K')\n"
       ]
     },
     {
@@ -2158,6 +2160,17 @@
         "*Формула Саттона когда газ содержитболее 12 мольных процентов CO2, 3 мольных процентов N2 или H2S*\n",
         "$$\n",
         "\\gamma_h= \\frac{\\gamma_w - 1.1767*y_{H_2S} - 1.5196*y_{CO_2} -0.9672*y_{N_2} - 0.6220*y_{H_20}} {1 - y_{H_2S} - y_{CO_2} - y_{N_2} -y_{H_20} } \n",
+        "$$\n",
+        "\n",
+        "**\n",
+        "\n",
+        "*Формула Саттона включая примеси газа* \n",
+        "$$\n",
+        "P_{pc} = (1 - y_{H_2S} - y_{CO_2} - y_{N_2} -y_{H_20}) p_{pch} + 0.06895(1306 y_{H_2S} + 1071 y_{CO_2} + 493.1 y_{N_2} + 3200.1y_{H_2O})\n",
+        "$$\n",
+        "\n",
+        "$$\n",
+        "T_{pc} = (1 - y_{H_2S} - y_{CO_2} - y_{N_2} -y_{H_20}) t_{pch} + 5/9(672.35y_{H_2S} + 547.58 y_{CO_2} + 227.16 y_{N_2} + 1164.9y_{H_2O})\n",
         "$$"
       ]
     },
@@ -2198,6 +2211,44 @@
       "source": [
         "Yh = (SGm - 1.1767*grav_h2s - 1.5196*grav_co2 - 0.9672*grav_n2 )/ (1 - grav_h2s - grav_co2 - grav_n2)\n",
         "print(round(Yh,4))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 57,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def Sutton_function(SGG):\n",
+        "    Ppch= round((0.06895*(756.8 - 131*SGG - 3.6*SGG*SGG)),2)\n",
+        "    Tpch= round((5/9*(169.2 + 349.5*SGG - 74*SGG*SGG)),2)\n",
+        "    return (Ppch, Tpch)\n",
+        "\n",
+        "Ppch, Tpch = Sutton_function(Yh)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 66,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "псевдокритические давление  54.97 бар\n",
+            "псевдокритическая температура 224.09 K\n"
+          ]
+        }
+      ],
+      "source": [
+        "#псевдокритические давление и температуа угл. компонентов\n",
+        "Ppc = (1- grav_h2s - grav_co2 -grav_n2)*Ppch + 0.0685*(1306*grav_h2s + 1071*grav_co2 +493.1* grav_n2)\n",
+        "# print( round(Ppc, 2))\n",
+        "Tpc = (1- grav_h2s - grav_co2 -grav_n2)*Tpch + 5/9*(672.35*grav_h2s + 547.58*grav_co2 +227.16*grav_n2) \n",
+        "\n",
+        "print('псевдокритические давление ', round(Ppc,2),'бар')\n",
+        "print(\"псевдокритическая температура\", round(Tpc,2), 'K')"
       ]
     },
     {
