--- a/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
@@ -2257,6 +2257,39 @@
         "id": "wzQLtTWHtcre"
       },
       "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Корректпровка псевдокритических свойства"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "$$\n",
+        "\\xi = 66.7(A^{0.9} - A^{1.6}) + 8.3(B^{0.5} - B^{4})\n",
+        "$$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def Witchet_aziz(A ,B):\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
