--- a/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
@@ -2280,7 +2280,14 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "def Witchet_aziz(A ,B):\n",
+        "def Witchet_aziz():\n",
+        "    A = \n",
+        "    B =\n",
+        "\n",
+        "contentH2S\n",
+        "\n",
+        "contentCO2\n",
+        "\n",
         "    "
       ]
     },
@@ -2289,7 +2296,42 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "def Sutton_function(SGG):\n",
+        "    Ppch= 0.06895*(756.8 - 131*SGG - 3.6*SGG*SGG)\n",
+        "    Tpch= 5/9*(169.2 + 349.5*SGG - 74*SGG*SGG)\n",
+        "    return (Ppch, Tpch)\n",
+        "\n",
+        "Ppch_values = []\n",
+        "Tpch_values = []\n",
+        "\n",
+        "SGG= np.linspace(0.55,1.7,1000)\n",
+        "\n",
+        "for i in SGG:\n",
+        "    Ppch, Tpch = Sutton_function(i)\n",
+        "    Ppch_values.append(Ppch)\n",
+        "    Tpch_values.append(Tpch)\n",
+        "\n",
+        "\n",
+        "fig, ax1 = plt.subplots()\n",
+        "\n",
+        "ax1.plot(SGG, Tpch_values , 'b-')\n",
+        "ax1.set_xlabel('Удельная плотность газа')\n",
+        "ax1.set_ylabel('Псевдокритическая температура (K)', color='b')\n",
+        "ax1.tick_params(axis='y', labelcolor='b')\n",
+        "ax1.set_ylim([167, 389])\n",
+        "\n",
+        "ax2 = ax1.twinx()\n",
+        "ax2.plot(SGG, Ppch_values, 'r-')\n",
+        "ax2.set_ylabel('Псевдокритическая давление (бар)', color='r')\n",
+        "ax2.tick_params(axis='y', labelcolor='r')\n",
+        "ax2.set_ylim([21.1, 48.3])\n",
+        "\n",
+        "plt.title('Псевдокритические свойства природных газов')\n",
+        "fig.tight_layout()\n",
+        "plt.grid (True)\n",
+        "plt.show()"
+      ]
     }
   ],
   "metadata": {
