--- a/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
@@ -2284,9 +2284,9 @@
         "    A = \n",
         "    B =\n",
         "\n",
-        "contentH2S\n",
+        "contentH2S = []\n",
         "\n",
-        "contentCO2\n",
+        "contentCO2 = []\n",
         "\n",
         "    "
       ]
