--- a/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
+++ b/Глава 01 - Свойства природных газов/блокнот/Examples.ipynb
@@ -2276,33 +2276,108 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (4282169707.py, line 2)",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;36m  Cell \u001b[1;32mIn[81], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    A =\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "13.6039324\n"
           ]
         }
       ],
       "source": [
-        "def Witchet_aziz():\n",
-        "    A = \n",
-        "    B =\n",
         "\n",
-        "contentH2S = []\n",
         "\n",
-        "contentCO2 = []\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
         "\n",
-        "    "
+        "def Rswp_CulbersonMcketta(p,T):\n",
+        "    A = 8.15839-6.12265E-02*T+1.91663E-04*T**2.0-2.1654E-07*T**3.0\n",
+        "    B = 1.01021E-02-7.44241E-05*T+3.05553E-07*T**2.0-2.94883E-10*T**3.0\n",
+        "    C = (-9.02505+0.130237*T-8.53425E-04*T**2.0\n",
+        "         +2.34122E-06*T**3.0-2.37049E-09*T**4.0)*1E-07\n",
+        "    \n",
+        "    Rswp = A+B*p+C*p**2.0\n",
+        "    return (Rswp)\n",
+        "\n",
+        "\n",
+        "def Rsw_CulbersonMcketta(p,T,S):\n",
+        "    A = 8.15839-6.12265E-02*T+1.91663E-04*T**2.0-2.1654E-07*T**3.0\n",
+        "    B = 1.01021E-02-7.44241E-05*T+3.05553E-07*T**2.0-2.94883E-10*T**3.0\n",
+        "    C = (-9.02505+0.130237*T-8.53425E-04*T**2.0+2.34122E-06*T**3.0-2.37049E-09*T**4.0)*1E-07\n",
+        "    \n",
+        "    Rswp = A+B*p+C*p**2.0\n",
+        "    Rsw = 10**(-0.0840655*S*T**-0.285854)*Rswp\n",
+        "    return (Rsw)\n",
+        "\n",
+        "# print(Rswp_CulbersonMcketta(2000.0,100.0))\n",
+        "    \n",
+        "\n",
+        "press=np.linspace(1000, 10000, 10)\n",
+        "Temp=np.linspace(80, 340, 20)\n",
+        "Rswp=np.zeros(len(Temp))   \n",
+        "Rsw=np.zeros(len(Temp))   \n",
+        "\n",
+        "# plt.figure(\"Rsw\", figsize=(4,5))    \n",
+        "# plt.figure(\"Rsw\")    \n",
+        "# plt.rcParams.update({'font.size':20})\n",
+        "\n",
+        "#Rswp[::]=Rswp_CulbersonMcketta(press[0],Temp[::])\n",
+        "#plt.plot(Temp,Rswp,'k--')\n",
+        "\n",
+        "\n",
+        "# for i in range(0,len(press)):\n",
+        "#     Rswp[::]=Rswp_CulbersonMcketta(press[i],Temp[::])\n",
+        "    #Rsw[::]=Rsw_CulbersonMcketta(press[i],Temp[::],10.)\n",
+        "    # plt.plot(Temp,Rswp,'k--')\n",
+        "    # plt.text(200, np.min(Rswp), str(press[i]), fontsize=10, color='red')\n",
+        "\n",
+        "    #plt.plot(Temp,Rsw, 'b-')\n",
+        "\n",
+        "#Rs=Rswp_CulbersonMcketta(press[0],Temp[0])\n",
+        "#print (Rs)\n",
+        "#Rswp[::]=Rswp_CulbersonMcketta(press[0],Temp[::])\n",
+        "\n",
+        "# plt.title('Rsw-CulbersonMcketta', fontsize=15, color=[1,0,1])\n",
+        "# plt.xlabel('Temperatura °F', fontsize=15, color='red')\n",
+        "# plt.ylabel('Rwsp', fontsize=15, color='blue')\n",
+        "# plt.grid('True')\n",
+        "# plt.minorticks_on()\n",
+        "# plt.grid(b=True, which='minor', color='g', linestyle='--')\n",
+        "# #plt.rc('xtick', labelsize=20)  \n",
+        "# plt.savefig('CulbersonMcketta.png',dpi=300)\n",
+        "\n",
+        "#fig, ax1 = plt.subplots(figsize=(4,5))\n",
+        "#color = 'tab:green'\n",
+        "#ax1.set_xlabel('Temperatura °F')\n",
+        "#ax1.set_ylabel('Rwsp', color=color)\n",
+        "#\n",
+        "#for i in range(0,len(press)):\n",
+        "#    Rswp[::]=Rswp_CulbersonMcketta(press[i],Temp[::])\n",
+        "#    ax1.plot(Temp, Rswp, 'r--')\n",
+        "#    ax1.tick_params(axis='y', labelcolor=color)\n",
+        "#    \n",
+        "#ax2 = ax1.twinx() \n",
+        "#color = 'tab:blue'\n",
+        "#ax2.set_ylabel('Rws', color=color)\n",
+        "#\n",
+        "#for i in range(0,len(press)):\n",
+        "#    Rsw[::]=Rsw_CulbersonMcketta(press[i],Temp[::],10)\n",
+        "#    ax2.plot(Temp, Rsw, 'b-')\n",
+        "#    ax2.tick_params(axis='y', labelcolor=color)\n",
+        "#\n",
+        "#plt.savefig('CulbersonMcketta.png',dpi=300)\n",
+        "#\n",
+        "#ay3 = ax1.twiny() \n",
+        "#color = 'tab:blue'\n",
+        "#ay3.set_xlabel('Temperatura °C')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [
         {
